@@ -1,3 +1,8 @@
+2007-07-31  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-about-me.c: (about_me_image_clicked_cb): use
+	g_get_user_special_dir() instead of hardcoding ~/Pictures
+
 2007-07-23  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-about-me.glade: add a tooltip to the image button to make it
